fix(ui): don't show scrollbar in event preview if unnecessary

--- a/src/EventPreview.css
+++ b/src/EventPreview.css
@@ -33,8 +33,6 @@
   & > main {
     background-color: var(--background-color);
     
-    flex-grow: 1;
-    
     & > * {
       height: 100%;
     }
